cpp01 except ex04

--- a/cpp01/ex00/Makefile
+++ b/cpp01/ex00/Makefile
@@ -2,7 +2,7 @@ SRCS		=	main.cpp Zombie.cpp randomChump.cpp newZombie.cpp
 
 OBJS		=	${SRCS:.cpp=.o}
 
-NAME		=	ex00
+NAME		=	zombie
 
 RM		=	rm -f
 
