--- a/cpp01/ex03/Makefile
+++ b/cpp01/ex03/Makefile
@@ -2,7 +2,7 @@ SRCS		=	main.cpp HumanA.cpp HumanB.cpp Weapon.cpp
 
 OBJS		=	${SRCS:.cpp=.o}
 
-NAME		=	ex03
+NAME		=	unnecessaryViolence
 
 RM		=	rm -f
 
