small updates cpp03

--- a/cpp03/ex02/Makefile
+++ b/cpp03/ex02/Makefile
@@ -2,7 +2,7 @@ SRCS		=	ClapTrap.cpp ScavTrap.cpp FragTrap.cpp main.cpp
 
 OBJS		=	${SRCS:.cpp=.o}
 
-NAME		=	ScavTrap
+NAME		=	FragTrap
 
 RM		=	rm -f
 
