almost finished ex03

--- a/cpp04/ex03/Makefile
+++ b/cpp04/ex03/Makefile
@@ -1,6 +1,6 @@
-SRCS		=	main.cpp AMateria.cpp \
-				ICharacter.cpp IMateriaSource.cpp \
-				Character.cpp Ice.cpp Cure.cpp
+SRCS		=	main.cpp AMateria.cpp Cure.cpp \
+				Ice.cpp Character.cpp MateriaSource.cpp
+
 
 OBJS		=	${SRCS:.cpp=.o}
 
