--- a/cpp05/ex03/Makefile
+++ b/cpp05/ex03/Makefile
@@ -1,12 +1,12 @@
-SRCS		=	main.cpp Bureaucrat.cpp AForm.cpp\
+SRCS		=	Bureaucrat.cpp AForm.cpp\
 				GradeTooLowException.cpp GradeTooHighException.cpp \
 				ShrubberyCreationForm.cpp \
 				PresidentialPardonForm.cpp RobotomyRequestForm.cpp \
-				NotSignedException.cpp 
+				NotSignedException.cpp Intern.cpp main.cpp \
 
 OBJS		=	${SRCS:.cpp=.o}
 
-NAME		=	ex02
+NAME		=	ex03
 
 RM			=	rm -f
 
